--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 17
 
       - name: Unit Tests
-        run: mvn -B test
+        run: mvn -B test --file pom.xml
 
       - name: Build the application
-        run: mvn -B package
+        run: mvn -B package --file pom.xml
